# unearth

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  changelogithub.config.json  noxfile.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  update.yml
docs/: cli_reference.md  conf.py  index.md  requirements.md  requirements.txt
docs/api/: evaluator.md  fetchers.md  finder.md  link.md  session.md
news/: 3.feature.1.md  3.feature.2.md  4.bugfix.md  4.feature.md  4.removal.md  5.feature.1.md  5.feature.3.md  6.bugfix.md  7.bugfix.md  towncrier_template.md
src/unearth/: __init__.py  __main__.py  auth.py  collector.py  errors.py  evaluator.py  finder.py  link.py  pep425tags.py  preparer.py  session.py  utils.py
src/unearth/fetchers/: __init__.py  async_.py  legacy.py  sync.py
src/unearth/vcs/: __init__.py  base.py  bazaar.py  git.py  hg.py  svn.py
tasks/: release.py
tests/: __init__.py  conftest.py  test_collector.py  test_evaluator.py  test_finder.py  test_link.py  test_session.py  test_utils.py
tests/fixtures/: app.py
tests/fixtures/findlinks/: index.html
tests/fixtures/index/: black.html  click.html  first.html  pipenv.html
tests/fixtures/json/: black.json  click.json  first.json  pipenv.json
